# yilim

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
config/: config.toml
migrations/: 20211115013032_initial_migration.sql
src/: cache.rs  config.rs  main.rs  token.rs
src/command/: command.rs  commands_handler.rs  mod.rs  option.rs  template.rs
src/command/templates/: mod.rs  select_channel.rs  send_role_toggle_message.rs  set_channel.rs
src/commands/: add_help_category.rs  mod.rs  set_guidelines_channel.rs  set_help_channel.rs  set_help_log_answered_channel.rs  set_help_log_waiting_channel.rs  set_twitch_toggle_channel.rs  topic.rs
src/interactions/: create_help_thread.rs  mod.rs  send_button_create.rs  send_categories.rs  send_channels.rs  twitch_toggle_role.rs
