[package]
name = "yilim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13.0", features = ["macros", "rt-multi-thread"]}
toml = "0.5.8"
serde = "1.0.130"
futures = "0.3.17"
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
lru = "0.7.0"

[dependencies.serenity]
version = "0.10.9"
default_features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "unstable_discord_api",
]